--- a/css/index.css
+++ b/css/index.css
@@ -77,6 +77,30 @@
                 color: rgb(240, 154, 6);
                 font-family: 'Roboto', sans-serif;
             }
+            /*Popup window*/
+            
+            .popup {
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: 400px;
+                padding: 20px;
+                background-color: #fff;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+                z-index: 9999;
+            }
+            /* Háttér átlátszósága */
+            
+            .overlay {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.5);
+                z-index: 9998;
+            }
             
             ul {
                 list-style-type: none;
